# circuit_components

./: .gitignore  README.md  pyproject.toml
circuit_components/: resistor.py
example/voltage_divider/: __init__.py
tests/: test_resistor.py
